deployment/infrastructure/ingress/ingressclass-nginx-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
    spec:
      containers:
        - name: controller
          image: k8s.gcr.io/ingress-nginx/controller:v1.8.1
          args:
            - /nginx-ingress-controller
            - --ingress-class=nginx-dev
          ports:
            - containerPort: 80
            - containerPort: 443
