deployment/infrastructure/ingress/ingress-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: main
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx-main
  rules:
    - http:
        paths:
          - path: /communication
            pathType: Prefix
            backend:
              service:
                name: com-control
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: map-client
                port:
                  number: 80
